[package]
name = "hanabot"
version = "0.2.3"
edition = "2021"
description = "A Slack bot that lets you play Hanabi"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
repository = "https://github.com/jonhoo/hanabot.git"
keywords = ["bot","slack","hanabi"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slack-morphism = { version = "2.14.0", features = ["hyper"] }
tokio = { version = "1.46.1", features = ["full"] }
rand = "0.9.1"
http = "1.3.1"
eyre = "0.6.12"
